--- a/client/main.html
+++ b/client/main.html
@@ -1,42 +1,58 @@
-<head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<template name="base">
+    <head>
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
 
-<body>
+    <body>
 
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">05/35 Log</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="row">
-    <div class="col s12 m6">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">Card Title</span>
-          <p>I am a very simple card. I am good at containing small bits of information.
-            I am convenient because I require little markup to use effectively.</p>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">05/35 Log</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a class="logout" href="#"><i class="material-icons">exit_to_app</i> </a></li>
+            </ul>
         </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
+    </nav>
+    {{#if currentUser}}
+        <div class="container">
+            <h3>Welcome&nbsp;{{username.services.discord.username}}&nbsp;<a class="btn-floating btn-large waves-effect waves-light blue"><i class="material-icons">add_alarm</i></a></h3>
+            <div class="row">
+                <form class="col s12">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">mode_edit</i>
+                            <input placeholder="Your thoughts..." id="message" type="text" >
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
+    {{else}}
+        <div class="row">
+            <div class="col offset-m2 m8 ">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Hey there! Welcome</span>
+                        <p>This is a journaling tool to help you grow and develop as a trader. It is to track your thoughts throughout the day and import them into your full journal.</p>
+                    </div>
+                    <div class="card-action">
+                        <a class="login" href="#">Sign In</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {{/if}}
 
-  <!--JavaScript at end of body for optimized loading-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
+    {{> Template.dynamic template=main}}
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    </body>
+</template>
